@@ -10,6 +10,10 @@ Included
 - Host precondition misses are explicit PARTIAL/SKIP evidence, not silent no-output aborts.
 - Gate enforces docs/update discipline: code changes without operator-facing doc updates fail with `VERIFY360_DOC_SYNC_MISSING`.
 - Gate now uses explicit state progression and two-phase output finalize (`stage -> finalize`) with `verify_360_output_manifest.json`.
+- Safe-run now enforces a non-blocking evidence corridor check before completion:
+- Expected receipt artifacts are verified for presence and digest consistency.
+- Pre-existing/stale unmanaged output files are flagged as orphan evidence.
+- Analysis still completes; warnings are recorded deterministically in `operator_receipt.json` (`SAFE_RUN_EVIDENCE_*` codes).
 - Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
 - New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
 - Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
